--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a class="link logo" href="#">Brit<span class="logo-part">lex</span></a>
         <ul class="list">
-          <li><a class="link nav-link" href="#">Home</a></li>
+          <li><a class="link nav-link current" href="#">Home</a></li>
           <li><a class="link nav-link" href="#">Skills</a></li>
           <li><a class="link nav-link" href="#">About Us</a></li>
           <li><a class="link nav-link" href="#">Pricing</a></li>
@@ -31,12 +31,12 @@
     <main>
       <!-- hero -->
       <section>
-        <h1>Learn Any Foreign Language</h1>
+        <h1 class="hero-title">Learn Any Foreign Language</h1>
         <p>
           With our teachers who write a program for each student, you will be
           able to make your first sketch after the first lesson.
         </p>
-        <button type="button">Get started</button>
+        <button class="header-button" type="button">Get started</button>
         <img
           src="./Images/learning-languages.jpg"
           alt="learning-languages"
@@ -45,7 +45,7 @@
       </section>
       <!-- skils -->
       <section>
-        <h2>Skills</h2>
+        <h2 class="section-title">Skills</h2>
         <ul class="list">
           <li>
             <img src="./Images/Speaking.jpg" alt="Speaking" width="390" />
@@ -92,7 +92,7 @@
       </section>
       <!-- about -->
       <section>
-        <h2>About Us</h2>
+        <h2 class="section-title">About Us</h2>
         <p>
           The model offers a framework for discussing problems related to the
           user's experience, as well as possible ways and means of solving them.
@@ -115,14 +115,14 @@
           </li>
         </ul>
         <img
-          src="./Images/Business competition.jpg"
+          src="./Images/Business_competition.jpg"
           alt="Business competition"
           width="540"
         />
       </section>
       <!-- pricing -->
       <section>
-        <h2>Pricing</h2>
+        <h2 class="section-title">Pricing</h2>
         <ul class="list">
           <li>
             <img src="./Images/Self-stady.jpg" alt="Self-stady" width="426" />
@@ -156,13 +156,13 @@
       </section>
       <!-- contacts -->
       <section>
-        <h2>Contact Us</h2>
+        <h2 class="section-title">Contact Us</h2>
         <img src="./Images/Contact.jpg" alt="Boy" width="425" />
         <p>
           Discover your current English level by taking our free online English
           test. Sign up to our newsletter for learning tips and free resources
         </p>
-        <form action="">
+        <form action="#">
           <input type="text" placeholder="Enter Your E-mail" />
           <button type="submit">Subscribe</button>
         </form>
