--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <!-- hero -->
       <section>
         <h1 class="hero-title">Learn Any Foreign Language</h1>
-        <p>
+        <p class="hero-text">
           With our teachers who write a program for each student, you will be
           able to make your first sketch after the first lesson.
         </p>
-        <button class="header-button" type="button">Get started</button>
+        <button class="hero-button" type="button">Get started</button>
         <img
           src="./Images/learning-languages.jpg"
           alt="learning-languages"
@@ -46,8 +46,8 @@
       <!-- skils -->
       <section>
         <h2 class="section-title">Skills</h2>
-        <ul class="list">
-          <li>
+        <ul class="list parent">
+          <li class="div1">
             <img src="./Images/Speaking.jpg" alt="Speaking" width="390" />
             <h3>Speaking</h3>
             <p>
@@ -61,7 +61,7 @@
             </p>
             <a class="link" href="#">Learn more</a>
           </li>
-          <li>
+          <li class="div2">
             <img src="./Images/Writing.jpg" alt="Writing" width="390" />
             <h3>Writing</h3>
             <p>
@@ -70,7 +70,7 @@
             </p>
             <a class="link" href="#">Learn more</a>
           </li>
-          <li>
+          <li class="div3">
             <img src="./Images/Reading.jpg" alt="Reading" width="390" />
             <h3>Reading</h3>
             <p>
@@ -79,7 +79,7 @@
             </p>
             <a class="link" href="#">Learn more</a>
           </li>
-          <li>
+          <li class="div4">
             <img src="./Images/Listening.jpg" alt="Listening" width="390" />
             <h3>Listening</h3>
             <p>
